objects/Cota_nacional__c.object
<CustomObject>
    <fields>
        <fullName>Bandeira__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bandeira</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>06</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Cotas nacionais (Bandeira)</relationshipLabel>
        <relationshipName>Bandeira_de_cota_de_produto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumo_de_cota__c</fullName>
        <label>Consumo de cota</label>
        <summarizedField>Criterio_de_cota_regional__c.Consumo_de_cotas__c</summarizedField>
        <summaryForeignKey>Criterio_de_cota_regional__c.Cota_nacional__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cota__c</fullName>
        <label>Cota</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criterio_nacional_de_cota__c</fullName>
        <label>Critério nacional de cota</label>
        <referenceTo>Criterio_nacional_de_cota__c</referenceTo>
        <relationshipLabel>Cotas nacionais</relationshipLabel>
        <relationshipName>Criterios_de_cota_de_produto</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nome_do_SKU__c</fullName>
        <formula>Criterio_nacional_de_cota__r.SKU__r.Nome_do_produto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome do SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional de vendas</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.CodProd__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <filterItems>
                <field>UDC__c.CodUs__c</field>
                <operation>equals</operation>
                <value>01</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>Cotas nacionais (Regional de vendas)</relationshipLabel>
        <relationshipName>Cotas_nacionais1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Criterio_nacional_de_cota__r.SKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_canal__c</fullName>
        <label>Sub-canal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canal__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atacadista</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Canais Alternativos</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Night club</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_de_cotas__c</fullName>
        <description>Indica o total de cotas dependentes que já foram criadas para este produto.</description>
        <inlineHelpText>Indica o total de cotas dependentes que já foram criadas para este produto.</inlineHelpText>
        <label>Total de critérios regionais</label>
        <summarizedField>Criterio_de_cota_regional__c.Cota__c</summarizedField>
        <summaryForeignKey>Criterio_de_cota_regional__c.Cota_nacional__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cota nacional</label>
    <listViews>
        <fullName>Cotas_Nacionais</fullName>
        <columns>NAME</columns>
        <columns>SKU__c</columns>
        <columns>Regional__c</columns>
        <columns>Canal__c</columns>
        <columns>Sub_canal__c</columns>
        <columns>Bandeira__c</columns>
        <columns>Cota__c</columns>
        <columns>Total_de_cotas__c</columns>
        <columns>Consumo_de_cota__c</columns>
        <columns>Criterio_nacional_de_cota__c</columns>
        <columns>Nome_do_SKU__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Cotas Nacionais</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>Cota Nacional {0000}</displayFormat>
        <label>Número da Cota Nacional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotas nacionais</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valida_bandeira_obrigatoria</fullName>
        <active>true</active>
        <errorConditionFormula>And (Criterio_nacional_de_cota__r.Bandeira__c,   isblank(Bandeira__c ))</errorConditionFormula>
        <errorDisplayField>Regional__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter a regional preenchida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_bandeira_vazia</fullName>
        <active>true</active>
        <errorConditionFormula>And (not(Criterio_nacional_de_cota__r.Bandeira__c),  not( isblank(Bandeira__c )))</errorConditionFormula>
        <errorDisplayField>Bandeira__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter a bandeira vazia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_canal_obrigatorio</fullName>
        <active>true</active>
        <errorConditionFormula>And (Criterio_nacional_de_cota__r.Canal__c,   text(Canal__c )=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Canal__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter o canal preenchido.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_canal_vazio</fullName>
        <active>true</active>
        <errorConditionFormula>And (not(Criterio_nacional_de_cota__r.Canal__c),  not( text(Canal__c )=&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Canal__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter o canal vazio.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_regional_obrigatoria</fullName>
        <active>true</active>
        <errorConditionFormula>And (Criterio_nacional_de_cota__r.Regional__c,   isblank(Regional__c ))</errorConditionFormula>
        <errorDisplayField>Regional__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter a regional preenchida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_regional_vazia</fullName>
        <active>true</active>
        <errorConditionFormula>And (not(Criterio_nacional_de_cota__r.Regional__c),  not( isblank(Regional__c )))</errorConditionFormula>
        <errorDisplayField>Regional__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter a regional vazia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_subcanal_obrigatorio</fullName>
        <active>true</active>
        <errorConditionFormula>And (Criterio_nacional_de_cota__r.Subcanal__c,   text(Sub_canal__c )=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Sub_canal__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter o subcanal preenchido.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_subcanal_vazio</fullName>
        <active>true</active>
        <errorConditionFormula>And (not( Criterio_nacional_de_cota__r.Subcanal__c ),  not( text(Sub_canal__c )=&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Sub_canal__c</errorDisplayField>
        <errorMessage>O critério de cota nacional obriga esta cota a ter o sub-canal vazio.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valida_total_de_cotas</fullName>
        <active>true</active>
        <errorConditionFormula>Total_de_cotas__c &gt;Cota__c</errorConditionFormula>
        <errorMessage>Você excedeu a quantidade de cotas disponíveis para a cota nacional</errorMessage>
    </validationRules>
</CustomObject>